@@ -1,5 +1,16 @@
 2014-03-10  Martin Robinson  <mrobinson@igalia.com>
 
+        [GTK][CMAKE] gtk-doc HTML documentation is generated by default when building with CMake
+        https://bugs.webkit.org/show_bug.cgi?id=130016
+
+        Reviewed by Carlos Garcia Campos.
+
+        * Source/PlatformGTK.cmake: Add two gtkdoc targets, one which builds HTML and one which
+        doesn't. Add the non-HTML version to the default target, but not the HTML version. The
+        HTML version will still run when building the distribution tarball.
+
+2014-03-10  Martin Robinson  <mrobinson@igalia.com>
+
         [GTK] [CMake] Clean up library linking
         https://bugs.webkit.org/show_bug.cgi?id=129782
 
